2001-10-21  Jody Goldberg <jgoldberg@home.com>

	* src/print.c (print_sheet_objects) : filter hidden objects.

	* src/commands.c (cmd_unmerge_cells_undo) : queue the original region
	  for a redraw before remerging in case of spans.

	* src/parser.y (gnumeric_parse_error) : Use workbook_sheet_by_name.

	* src/sheet.c (sheet_lookup_by_name) : delete bogus routine.

2001-10-21  Jody Goldberg <jgoldberg@home.com>

	* src/cellspan.c (cell_calc_span) : min_col is exclusive.

	* src/sheet-object-container.c (sheet_object_container_update_bounds) :
	  handle visibility.
	* src/sheet-object-cell-comment.c (cell_comment_update_bounds) : ditto.
	* src/sheet-object-graphic.c (sheet_object_graphic_update_bounds) : ditto.
	(sheet_object_filled_update_bounds) : ditto.
	* src/sheet-object-widget.c (sheet_object_widget_update_bounds) : ditto.

	* src/sheet-object.c (sheet_object_init) : init is_visible.
	  Not really needed, but lets be careful.
	(sheet_object_update_bounds) : check to visibility.

2001-10-20  jody goldberg <jgoldberg@home.com>

	* src/sheet.c (cb_max_cell_width) : factor in indents too.

2001-10-20  Jody Goldberg <jgoldberg@home.com>

	* src/sheet.c (sheet_find_boundary_{horizontal,vertical}) : handle
	  jumping to end of non-blank region where the end is hidden.

2001-10-19  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-graph.c (gnm_graph_setup) : it is 'oaf-run-query'
	  Spew the informative message for all oaf exceptions.

2001-10-19  Morten Welinder  <terra@diku.dk>

	* src/number-match.c (compute_value): Fix parsing of decimal
 	fractions and exponents.

2001-10-19  Morten Welinder  <terra@diku.dk>

	* src/goal-seek.c (goal_seek_newton): Deliberately overshoot in
 	each iteration.  This makes it more likely that we get to hit both
 	sides of the root.
	(goal_seek_bisection): Introduce Newton steps when we're close to
 	a root.  Pick best of xmid, xneg, and xpos when we decide we have
 	the required precision.
