@@ -439,7 +439,6 @@ cb_name_guru_add (NameGuruState *state)
 	ParseError    perr;
 	ExprTree *expr;
 	char const *name, *expr_text, *tmp;
-	gchar *error;
 
 	g_return_val_if_fail (state != NULL, FALSE);
 
@@ -467,6 +466,7 @@ cb_name_guru_add (NameGuruState *state)
 	if (expr == NULL) {
 		gnumeric_notice (state->wbcg, GNOME_MESSAGE_BOX_ERROR, perr.message);
 		gtk_widget_grab_focus (GTK_WIDGET (state->expr_text));
+		parse_error_free (&perr);
 		return FALSE;
 	} else if (expr_name) {
 		if (!expr_name->builtin) {
@@ -480,10 +480,18 @@ cb_name_guru_add (NameGuruState *state)
 			gnumeric_notice (state->wbcg, GNOME_MESSAGE_BOX_ERROR,
 					 _("You cannot redefine a builtin name."));
 	} else {
+		char *error = NULL;
 		if (name_guru_scope_get (state) == NAME_GURU_SCOPE_WORKBOOK)
 			expr_name = expr_name_add (state->wb, NULL, name, expr, &error);
 		else
 			expr_name = expr_name_add (NULL, state->sheet, name, expr, &error);
+
+		if (expr_name == NULL) {
+			g_return_val_if_fail (error != NULL, FALSE);
+			gnumeric_notice (state->wbcg, GNOME_MESSAGE_BOX_ERROR, error);
+			gtk_widget_grab_focus (GTK_WIDGET (state->expr_text));
+			return FALSE;
+		}
 	}
 
 	g_return_val_if_fail (expr_name != NULL, FALSE);
